test performance improvement avoiding showing invisible text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+html *{
+    font-display: swap;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
